Bug 1759770 - [Core]Tooltips of Stop/Start/Remove button in Containers tab are truncated.
Reviewed-on: http://bellevue-ci.eng.vmware.com:8080/3937
Bellevue-Verified: jenkins <jenkins@vmware.com>
CS-Verified: jenkins <jenkins@vmware.com>

--- a/ui/app/src/styles/main.scss
+++ b/ui/app/src/styles/main.scss
@@ -2275,6 +2275,7 @@ $alert-text-color: #ffffff;
   display: inline;
   width: 40px;
   text-align: center;
+  z-index: 101;
 }
 .toolbar-actions .toolbar-action .btn {
   color: $main_color;
